--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dolan-docs",
   "private": true,
   "version": "0.0.0",
+  "packageManager": "pnpm@7.16.1",
   "license": "MIT",
   "scripts": {
     "docs:dev": "vitepress dev docs",
