--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: hugo-on-deno-deploy
+          project: dolan-docs
           entrypoint: https://deno.land/std/http/file_server.ts
           root: docs/.vitepress/dist
