--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "packageManager": "pnpm@7.16.1",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs",
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
